--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://github.com/SalOne22/goit-js-hw-11",
+  "homepage": "https://github.com/SalOne22/image-finder",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
+    "build": "parcel build src/*.html --public-url /image-finder/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SalOne22/goit-js-hw-11.git"
+    "url": "git+https://github.com/SalOne22/image-finder.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/SalOne22/goit-js-hw-11/issues"
+    "url": "https://github.com/SalOne22/image-finder/issues"
   },
   "dependencies": {
     "axios": "^1.4.0",
